# Aurora_ORIONCORE_Directory_Main

./: .codacy.yaml  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GITWIZ.md  LICENSE  Makefile  README.md  SPEC__WARRANT_LENS__v1.md  ruff.toml  setup.cfg
.claude/: settings.json
.codacy/: .gitignore  codacy.config.json  configure-codacy-summary.json
.devcontainer/: devcontainer.json
.githooks/: post-merge  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
catalog/: archive_inventory.jsonl  blank_file_triage__2026-03-10.json  canon_sync_payloads.yaml  classification_overrides.yaml  constellation-config.json  crew_life_model.json  dev_toolkit_manifest.json  flight_contract.yaml  gitwiz_hygiene_policy.yaml  hour_aboard_scenario.json  l2_scenario_seed_catalog.json  live_watch_scenario.json  mission_control_manifest.json  path_aliases.csv  (+28 more)
warrant-lens/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
warrant-lens/config/: config 2.yaml  fit_table.yaml  taxonomy 2.yaml
warrant-lens/examples/: mixed_corpus.txt  sample.txt
warrant-lens/src/warrant_lens/: __init__.py  __main__.py  anthropic_client.py  benchmark.py  calibrate.py  classify.py  config_loader.py  emit_html.py  emit_inline.py  emit_trace.py  filter.py  llm_client.py  model.py  pipeline.py  restate 2.py  segment.py  warrant.py
warrant-lens/tests/: test_acceptance.py  test_anthropic_client.py  test_benchmark.py  test_calibrate.py  test_emit_html.py  test_v11_regressions.py
(+701 files in other folders)
